# pyworks-medialibrary

./: .coveragerc  .gitignore  Makefile  README.md  conftest.py  pyproject.toml
medialibrary/: config.py  demo.py  demo_storage_interface.py  demov2.py  s3_storage.py  storage.py
pyworks_medialibrary/: s3_storage.py  storage.py
tests/: test_interface.py  test_palindrome.py  test_storage.py  test_with_unittest.py
