[tool.poetry]
name = "pyworks-medialibrary"
version = "0.1.0"
description = "Provide awsome tools for manage images and documents."
authors = [
    "PyWorks Asia Team <opensource@pyworks.asia>"
]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/pyworksasia/pyworks-medialibrary"
homepage = "https://github.com/pyworksasia/pyworks-medialibrary"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.17.17"
python-dotenv = "^0.15.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
